----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-12-23 Marc Delisle  <lem9@users.sourceforge.net>
    * css/phpmyadmin.css.php: Patch 864334, preserve white-space between quotes
    * db_datadict.php, db_printview.php: bug 863713: printing on non-IE browser

2003-12-21 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).

2003-12-18 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_relation.php: bug 860258: do not destroy foreign key references
      to another db (still cannot enter via phpMyAdmin this kind of
      references)
    * lang/indonesian: Updated, thanks to Rachim Tamsjadi (tamsy).

2003-12-17 Michal Cihar  <ilovetranslations@cihar.com>
    * lang/sync_lang.sh: Fix generation of translation, when source is in
      utf-8.
    * lang/chinese_big5.inc.php: Was broken due to above bug, thanks Marc for
      noticing this.

2003-12-16 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/lithuanian: Updated, thanks to Vilius Zigmantas (viliusz).

2003-12-15 Garvin Hicking  <me@supergarv.de>
    * tbl_replace.php: Check all required array indizes for multi-row edit

2003-12-15 Marc Delisle  <lem9@users.sourceforge.net>
    * read_dump.php: bug 859062: Go & Bookmark problem when the
      query has a character like "+" in it

2003-12-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php, ldi_table.php: maximum upload size
    * tbl_change.php: max BLOB upload size

2003-12-12 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details.php, libraries/common.lib.php, lang/*: 
      new feature to display the maximum upload size
      TODO: detect if upload succeeded

2003-12-12 Garvin Hicking <juststayalittlebitlonger@supergarv.de>
    * export.php: Fixed Regex
    * transformation_wrapper.php, lang/*, libraries/display_tbl.lib.php,
      libraries/transformations/application_octetstream__download.inc.php: