@@ -3500,6 +3500,15 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
     letter of either the key or the display field.
 
 </p>
+<h4>
+    [6.22] Bookmarks: Can I execute a default bookmark automatically
+    when entering Browse mode for a table? 
+</h4>
+<p>
+    Yes. If a bookmark has the same label as a table name, it will be
+    executed. 
+</p>
+ 
 <a name="faqproject"></a><br />
 <h3>[7. phpMyAdmin project]</h3>
 
