@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-12-25 Marc Delisle  <lem9@users.sourceforge.net>
+    * db_details_qbe.php: error when generating joins 
+    * Documentation.html: FAQ 6.22: default bookmark execution
+
 2003-12-23 Marc Delisle  <lem9@users.sourceforge.net>
     * css/phpmyadmin.css.php: Patch 864334, preserve white-space between quotes
     * db_datadict.php, db_printview.php: bug 863713: printing on non-IE browser
